<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_this_app">About this app</string>
    <string name="about_uptodown">About Uptodown</string>
    <string name="accept_and_download">Accept and download</string>
    <string name="access_data">Access Data</string>
    <string name="account">com.uptodown.account</string>
    <string name="action_added_to_wishlist">%s added to wishlist</string>
    <string name="action_app_details_settings">App Info</string>
    <string name="action_button_retry">Retry</string>
    <string name="action_cancel_download">Cancel download</string>
    <string name="action_delete_all">Delete all</string>
    <string name="action_name_file_explorer">File explorer</string>
    <string name="action_pause">Pause</string>
    <string name="action_removed_from_wishlist">%s removed from wishlist</string>
    <string name="action_update">Update</string>
    <string name="add_recommended">Add to the recommended apps list</string>
    <string name="add_to">Add to…</string>
    <string name="ads_msg_gdpr">Use of your personal data to show personalised ads</string>
    <string name="ads_title_gdpr">Advertising</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="advertising">Advertising</string>
    <string name="agree_to_all">Accept all</string>
    <string name="all_partners_toolbar_title">Partners (All vendors)</string>
    <string name="already_preregistered">Pre-registered</string>
    <string name="already_signed_up">Already have an account? SIGN IN</string>
    <string name="analytics_msg_gdpr">Google Analytics for Firebase provides free, unlimited reports on up to 500 different events. The SDK automatically captures certain key events and user properties for measurement.</string>
    <string name="analytics_title_gdpr">ANALYTICS</string>
    <string name="analyze">Scan</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="answer_always">Always</string>
    <string name="answer_daily">Daily</string>
    <string name="answer_finish">Finish</string>
    <string name="answer_never">Never</string>
    <string name="answer_next">Next</string>
    <string name="answer_no">"Nope, don't bother me"</string>
    <string name="answer_skip">Skip</string>
    <string name="answer_weekly">Weekly</string>
    <string name="answer_yes">Yes, please</string>
    <string name="apks_to_install_label_dialog_splits">Apks to install:</string>
    <string name="app_catalog_details">See on Uptodown App Store</string>
    <string name="app_detail_add_wishlist_title">Add to wishlist</string>
    <string name="app_detail_enqueue_download">Download pending</string>
    <string name="app_detail_more_info_title">More info</string>
    <string name="app_detail_not_available">Download not available</string>
    <string name="app_detail_not_compatible">App not compatible</string>
    <string name="app_detail_not_found">Not found</string>
    <string name="app_detail_play_button">Play</string>
    <string name="app_detail_remove_wishlist_title">Remove from wishlist</string>
    <string name="app_detail_reviews_title">Rating</string>
    <string name="app_detail_whats_new">"What's new"</string>
    <string name="app_details_faqs_title">FAQs</string>
    <string name="app_details_technical_data_title">Requirements</string>
    <string name="app_details_technical_data_version">(Last version)</string>
    <string name="app_info_notes_title">Notes</string>
    <string name="app_instaled_details">App installed details</string>
    <string name="app_install_info">%1$s %2$s</string>
    <string name="app_installed">Installed</string>
    <string name="app_installed_files_title">Files</string>
    <string name="app_installed_first_installed">First installation</string>
    <string name="app_installed_see_detail">See detail</string>
    <string name="app_installed_x_files_value">%s files</string>
    <string name="app_name">Uptodown App Store</string>
    <string name="app_technical_data_avaialable_at_utd">The app’s technical data is available in Uptodown</string>
    <string name="app_technical_data_avaialable_at_utd_description" formatted="false">"%s, so you can check the %s in the datasheet that accompanies the download, as well as the signature that verifies the file's origin:"</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apps">Apps</string>
    <string name="arquitecture_label_dialog_splits">Arquitecture:</string>
    <string name="asset_statements">"[{
 \"relation\": [\"delegate_permission/common.handle_all_urls\"],
 \"target\": {
 \"namespace\": \"web\",
 \"site\": \"http://www.uptodown.com\",
 }
}]"</string>
    <string name="autoupdate_installed_version">Installed: %1$s</string>
    <string name="autoupdate_update_size">(%1$s)</string>
    <string name="autoupdate_update_version">Update: %1$s</string>
    <string name="available_soon">Available soon</string>
    <string name="avatar_activity_changed_success">Avatar has been changed successfully.</string>
    <string name="avatar_activity_title">Choose your profile picture.</string>
    <string name="avatar_activity_toolbar_title">Change avatar</string>
    <string name="avatar_edit_title">Change my avatar</string>
    <string name="avatars">Avatars</string>
    <string name="back">Back</string>
    <string name="back_to_uptodown">Back to Uptodown</string>
    <string name="backup">Backup copy</string>
    <string name="backup_file_extension">Extension:</string>
    <string name="backup_file_name_format">Name format for the backup file:</string>
    <string name="backup_finished">Backup completed</string>
    <string name="backup_no_free_space">Not enough space.</string>
    <string name="best_alternatives">Best alternatives</string>
    <string name="best_comments">Best</string>
    <string name="boton_registro">Sign up</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="brand">Brand</string>
    <string name="browse_files">Browse files</string>
    <string name="btn_back_content_desc">Back</string>
    <string name="btn_back_options_content_desc">options screen back button</string>
    <string name="btn_init_screen_text">Show Init Screen</string>
    <string name="button_notification_dialog_permission">Go to app configuration</string>
    <string name="button_send_suggestion">Send</string>
    <string name="button_suggestions">Suggestions</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="campaign.appName">getAppName</string>
    <string name="campaign.iconUrl">getIconUrl</string>
    <string name="campaign.imageUrl">getImageUrl</string>
    <string name="cancel_registration">Cancel registration</string>
    <string name="categories_title">Categories</string>
    <string name="category_title_warnings">Warnings</string>
    <string name="ccpa_consent_btn_message">Confirm</string>
    <string name="ccpa_consent_message">"I want to make a 'Do Not Sell My Personal Information' request."</string>
    <string name="ccpa_content_message">" "<p>When you visit this website, we collect personal information such as IP addresses, cookie identifiers and other pseudonymous identifiers. This information may be used to personalize content based on your interests, run and optimize advertising campaigns tailored to you, measure the performance of ads and content, and derive insights about the audiences who engage with ads and content. This information may also be disclosed by us to third parties on the <a href="https://www.iabprivacy.com/optout.html">IAB’s List of Downstream Participants</a> that may further disclose it to other third parties.</p>"

 "<p>Using personal information as described above is an integral part of how we operate our website, make revenue to support our staff, and generate relevant content for our audience. You can learn more about our data collection and use practices in our Privacy Policy.</p>"

 "<p>If you wish to opt out of the disclosure of your personal information to third parties by us, please use the below opt out and confirm your selection. Please note that after your opt out request is processed, you may continue seeing interest-based ads based on personal Information utilized by us or personal information disclosed to third parties prior to your opt out. You may separately opt out of the further disclosure of your personal information by third parties on the <a href="https://www.iabprivacy.com/optout.html">IAB’s List of Downstream Participants</a>.</p>" "</string>
    <string name="edit_profile">Edit profile</string>
    <string name="open">Open</string>
    <string name="public_profile_downloads">downloads</string>
    <string name="public_profile_followers">followers</string>
    <string name="public_profile_reviews">reviews</string>
    <string name="recommended_apps">Recommended apps</string>
    <string name="updates_button_download_app">Download</string>
    <string name="wishlist_title">Wishlist</string>
    <string name="zero">0</string>
    <string name="zero_mb">0MB</string>
</resources>