<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="wrap_content" android:layout_height="46.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:gravity="center_vertical" android:id="@id/rl_status_loading" android:background="@drawable/shape_stroke_blue_primary" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ProgressBar android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_m" android:layout_marginBottom="@dimen/margin_m" android:layout_centerInParent="true" style="@style/CoreProgressBarLoadingContent" />
    </RelativeLayout>
    <TextView android:textSize="@dimen/text_size_l" android:textColor="@color/white" android:gravity="center" android:id="@id/tv_status_download" android:background="@drawable/ripple_blue_primary_button" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/updates_button_download_app" android:textAllCaps="true" style="@style/AutoSizeTextView" />
    <RelativeLayout android:gravity="center_vertical" android:id="@id/rl_status_pre_register" android:background="@drawable/ripple_blue_primary_button" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textSize="@dimen/text_size_l" android:textColor="@color/white" android:gravity="center" android:id="@id/tv_status_pre_register" android:layout_width="fill_parent" android:layout_height="fill_parent" android:textAllCaps="true" style="@style/AutoSizeTextView" />
        <ImageView android:id="@id/iv_status_pre_register" android:visibility="gone" android:layout_width="@dimen/icon_size_s" android:layout_height="@dimen/icon_size_s" android:layout_centerVertical="true" android:contentDescription="@null" android:layout_marginStart="@dimen/margin_m" android:layout_marginEnd="@dimen/margin_l" android:layout_alignParentEnd="true" app:srcCompat="@drawable/vector_clock" />
    </RelativeLayout>
    <TextView android:textSize="@dimen/text_size_l" android:textColor="@color/white" android:gravity="center" android:id="@id/tv_open_download_button" android:background="@drawable/ripple_blue_primary_button" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/open" android:textAllCaps="true" style="@style/AutoSizeTextView" />
    <RelativeLayout android:id="@id/rl_status_downloading" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageView android:id="@id/iv_cancel_downloading" android:background="?android:selectableItemBackground" android:padding="10.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:contentDescription="@null" android:layout_alignParentEnd="true" app:srcCompat="@drawable/core_vector_cross" />
        <ImageView android:id="@id/iv_resume_downloading" android:background="?android:selectableItemBackground" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:contentDescription="@null" android:layout_toStartOf="@id/iv_cancel_downloading" android:layout_alignParentEnd="true" app:srcCompat="@drawable/vector_resume_download" />
        <ProgressBar android:id="@id/pb_download_button" android:layout_marginTop="@dimen/margin_s" android:layout_toStartOf="@id/iv_resume_downloading" style="@style/ProgressBarDownloading" />
        <TextView android:textSize="@dimen/text_size_m" android:textColor="@color/text_primary" android:ellipsize="end" android:id="@id/tv_size_downloaded" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/zero_mb" android:maxLines="1" android:layout_above="@id/pb_download_button" android:layout_alignParentStart="true" />
        <TextView android:textSize="@dimen/text_size_m" android:textColor="@color/text_primary" android:ellipsize="end" android:id="@id/tv_size_total" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/zero_mb" android:maxLines="1" android:layout_above="@id/pb_download_button" android:layout_toEndOf="@id/tv_size_downloaded" />
        <TextView android:textSize="@dimen/text_size_xl" android:textColor="@color/text_primary" android:id="@id/tv_percentage_downloaded" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/zero" android:layout_below="@id/pb_download_button" />
        <TextView android:textSize="@dimen/text_size_l" android:textColor="@color/text_primary" android:id="@id/tv_enqueue_download" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_detail_enqueue_download" android:layout_below="@id/pb_download_button" />
    </RelativeLayout>
</RelativeLayout>