<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="@color/background_color" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:id="@id/s_public_profile" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:id="@id/iv_bg_public_profile" android:layout_width="fill_parent" android:layout_height="@dimen/public_profile_header_size" android:contentDescription="@null" />
            <ImageView android:id="@id/iv_icon_public_profile" android:layout_width="@dimen/icon_size_xl" android:layout_height="@dimen/icon_size_xl" android:layout_marginTop="-50.0dip" android:layout_below="@id/iv_bg_public_profile" android:layout_centerHorizontal="true" android:contentDescription="@null" />
            <com.uptodown.util.views.UsernameTextView android:textSize="@dimen/font_size_26" android:textColor="@color/text_primary" android:ellipsize="end" android:id="@id/tv_name_public_profile" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_s" android:layout_marginTop="@dimen/margin_m" android:layout_marginRight="@dimen/margin_s" android:lines="1" android:layout_below="@id/iv_icon_public_profile" android:layout_centerHorizontal="true" />
            <ImageView android:id="@id/iv_turbo_mark_public_profile" android:visibility="invisible" android:layout_width="15.0dip" android:layout_height="15.0dip" android:layout_marginTop="@dimen/margin_l" android:layout_below="@id/iv_icon_public_profile" android:contentDescription="@null" android:layout_marginEnd="@dimen/margin_m" android:layout_toEndOf="@id/tv_name_public_profile" app:srcCompat="@drawable/vector_turbo" />
            <TextView android:textSize="@dimen/text_size_m" android:textColor="@color/text_secundary" android:ellipsize="end" android:id="@id/tv_registered_public_profile" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_m" android:layout_marginTop="@dimen/margin_s" android:layout_marginRight="@dimen/margin_m" android:lines="1" android:layout_below="@id/tv_name_public_profile" android:layout_centerHorizontal="true" />
            <TextView android:textSize="@dimen/text_size_xs" android:textColor="@color/white" android:id="@id/tv_edit_public_profile" android:background="@drawable/ripple_blue_primary_button" android:paddingLeft="@dimen/margin_m" android:paddingTop="@dimen/margin_s" android:paddingRight="@dimen/margin_m" android:paddingBottom="@dimen/margin_s" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/margin_m" android:text="@string/edit_profile" android:lines="1" android:layout_below="@id/iv_bg_public_profile" android:textAllCaps="true" android:layout_alignParentEnd="true" />
            <LinearLayout android:orientation="horizontal" android:id="@id/ll_user_stats_public_profile" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/margin_m" android:layout_below="@id/tv_registered_public_profile">
                <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <TextView android:textSize="@dimen/text_size_l" android:textColor="@color/text_primary" android:ellipsize="end" android:id="@id/tv_downloads_value_public_profile" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_m" android:layout_marginTop="@dimen/margin_m" android:layout_marginRight="@dimen/margin_m" android:lines="1" />
                    <TextView android:textSize="@dimen/text_size_m" android:textColor="@color/text_secundary" android:ellipsize="end" android:id="@id/tv_downloads_label_public_profile" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_m" android:layout_marginRight="@dimen/margin_m" android:text="@string/public_profile_downloads" android:lines="1" />
                </LinearLayout>
                <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <TextView android:textSize="@dimen/text_size_l" android:textColor="@color/text_primary" android:ellipsize="end" android:id="@id/tv_reviews_value_public_profile" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_m" android:layout_marginTop="@dimen/margin_m" android:layout_marginRight="@dimen/margin_m" android:lines="1" />
                    <TextView android:textSize="@dimen/text_size_m" android:textColor="@color/text_secundary" android:ellipsize="end" android:id="@id/tv_reviews_label_public_profile" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_m" android:layout_marginRight="@dimen/margin_m" android:text="@string/public_profile_reviews" android:lines="1" />
                </LinearLayout>
                <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <TextView android:textSize="@dimen/text_size_l" android:textColor="@color/text_primary" android:ellipsize="end" android:id="@id/tv_followers_value_public_profile" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_m" android:layout_marginTop="@dimen/margin_m" android:layout_marginRight="@dimen/margin_m" android:lines="1" />
                    <TextView android:textSize="@dimen/text_size_m" android:textColor="@color/text_secundary" android:ellipsize="end" android:id="@id/tv_followers_label_public_profile" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_m" android:layout_marginRight="@dimen/margin_m" android:text="@string/public_profile_followers" android:lines="1" />
                </LinearLayout>
            </LinearLayout>
            <include android:id="@id/loading_view_public_profile" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_l" android:layout_marginBottom="@dimen/margin_l" android:layout_below="@id/ll_user_stats_public_profile" android:layout_centerHorizontal="true" layout="@layout/core_loading_view" />
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/ll_user_stats_public_profile">
                <include android:id="@id/wishlist_public_profile" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_l" layout="@layout/public_profile_top" />
                <include android:id="@id/recommended_apps_public_profile" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_l" layout="@layout/public_profile_top" />
                <include android:id="@id/reviews_public_profile" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_l" android:layout_marginBottom="@dimen/margin_xl" layout="@layout/public_profile_top" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
    <androidx.appcompat.widget.Toolbar android:id="@id/toolbar_public_profile" android:layout_width="fill_parent" android:layout_height="?android:actionBarSize" />
</RelativeLayout>